# Python-projects

awkpp/: awkpp.py  awkpp_x_sanchez-0.0.1-py3-none-any.whl  output.csv  sample.awkpp
awkpp/build_package/: README.md  setup.cfg
awkpp/build_package/awkpp_x_sanchez.egg-info/: PKG-INFO  SOURCES.txt
awkpp/build_package/src/awkpp/: __main__.py
lessons/: Center.py  DataBase.py  Lesson.py  Main.py  Menu.py  Test.py  ch_lessons.sqlite
newsportal/: requirements.txt
newsportal/reporters/: Credentials.py  CurrencyCNY.py  DidYouSeeTheUSADebt.py  DotaMatchReporter.py  FollowerCounterReporter.py  KurilSeismic.py  RepoGamer.py  RepoWiki.py  RoboBlackWidow.py  RoboCorona.py  RodoIlonMask.py  RodoMaska.py  StreamerReporter.py  airpods_pro.py  asteroids.py  biocad.py  first_reporter.py  fourth_reporter.py  github.py  kfc_coupons.py  marathon_bet.py  rep1.py  rep2.py  rep3.py  rep4.py  reporter-bushe.py  reporter-movie-news.py  reporter-world-stat.py  reporter.py  reporter1.py  reporter2.py  reporter3.py  reporter4.py  reporterAI.py  reporterCVIR.py  reporterPJ.py  reporterUSD.py  reporter_1.py  reporter_2.py  reporter_3.py  (+18 more)
newsportal/site/miner/: admin.py  models.py  views.py
newsportal/site/miner/migrations/: 0001_initial.py  0002_log.py  0003_auto_20210425_0708.py  0004_auto_20210425_0817.py  0005_alter_news_time.py  0006_alter_news_options.py  0007_alter_log_asctime.py  0008_remove_log_asctime.py  0009_log_time.py  0010_alter_log_time.py  0011_alter_log_time.py
newsportal/site/miner/templates/: index.html
newsportal/site/portal/: settings.py  urls.py
(+1 files in other folders)
