[metadata]
name = awkpp-x-sanchez
version = 0.0.1
author = Kharitonov Alexander
author_email = sanya0112@mail.ru
description = Tool for agregating data in .csv format using small amount of RAM.
long_desciption = file: README.md
long_description_content_type = text/markdown
url = http://awkpp.com/
project_urls = 
	Bug Tracker = http://awkpp.com/task/add
classifier = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
